--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
               <img src="img/main_menu.svg"/>
             </div>
           </header>
-<div class="section01">
-    
+<section class="section01">
     <div class="section01_container"> 
             <!-- newchallenge text 애니메이션 -->
     <img class="n" src="img/section_01/s01_n.svg">
@@ -47,9 +46,9 @@
             <source src="./video/03.mp4">
         </video>
 </div>
-        </div>
+        </section>
 
-<div class="section02">
+<section class="section02">
             <div class="section02_container">
                 <img class="kay" src="img/section_02/section02_kay.svg">
                 <img class="how" src="img/section_02/section02_how.svg">
@@ -59,22 +58,105 @@
                 <img class="kay2" src="img/section_02/section02_kay.svg">
                 <img class="that" src="img/section_02/section02_That.svg">
             </div>
+            </section>
+
+            <section class="section03">
+                <div class="section03_container">
+                </div>
+            </section>
+
+
+            <div class="section04">
+                <div class="section04_container">
+                    <!-- 배경이랑 라인 신발 -->
+                <img class="bg" src="img/section_04/s04_bg.png" />
+                <img class="line" src="img/main_line.svg" />
+                <img class="mountain" src="img/section_04/s04_mountain.png" />
+                <img class="slide" src="img/section_04/s04_slide.svg" />
+                <img class="shoes" src="img/section_04/s04_shoes.svg" />
+    <!-- 로고 -->
+    <img class="logo" src="img/section_04/s04_logo.svg" />
+    <img class="sport" src="img/section_04/s04_sport.svg" />
+    <img class="style" src="img/section_04/s04_style.svg" />
+        <!-- 디테일 -->
+        <img class="point" src="img/section_04/s04_point.svg" />
+        <img class="point2" src="img/section_04/s04_point.svg" />
+        <img class="detail" src="img/section_04/s04_detail_01.svg" />
+        <img class="detail2" src="img/section_04/s04_detail_02.svg" />
+        <img class="main_text" src="img/section_04/s04_maintext_01.svg" />
+        <img class="sub_text" src="img/section_04/s04_subtext_01.svg" />
+        <img class="main_text2" src="img/section_04/s04_maintext_02.svg" />
+        <img class="sub_text2" src="img/section_04/s04_subtext_02.svg" />
+        <img class="scroll" src="img/main_scroll.svg" /> 
+      </div>
             </div>
 
 
+
+    <section class="section05">
+        <div class="section05_container">
+            <img class="bg2" src="img/section_04/s04_bg.png" />
+            <img class="line2" src="img/main_line.svg" />
+            <img class="mountain2" src="img/section_04/s04_mountain.png" />
+            <img class="slide2" src="img/section_04/s04_slide.svg" />
+            <img class="shoes2" src="img/section_05/s05_shoes.png" />
+        <!-- 디테일 -->
+        <img class="point3" src="img/section_04/s04_point.svg" />/> 
+        <img class="detail3" src="img/section_05/s05_detail.svg" />
+        <img class="main_text3" src="img/section_05/s05_maintext.svg" />
+        <img class="sub_text3" src="img/section_05/s05_subtext.svg" />
+              <!-- 오른쪽 큰 텍스트 -->
+              <img class="letsinvent" src="img/section_05/s05_letsinvent.svg" />
+              <img class="text_01" src="img/section_05/s05_text_01.svg" />
+              <img class="text_02" src="img/section_05/s05_text_02.svg" />
+              <img class="text_03" src="img/section_05/s05_text_03.svg" />
+       <!-- 왼쪽 하단 큰 텍스트 -->
+       <img class="the" src="img/section_05/s05_the.svg" />
+       <img class="future" src="img/section_05/s05_future.svg" />
+        </section>
+        </div>
+
+ <!-- 히스토리 -->
+ <section class="section06">
+    <div class="section06_container">
+      <img class="bg3" src="img/section_06/s06_bg.svg" />
+      <img class="bg_1947" src="img/section_06/s06_1947.svg" />
+      <img class="francois" src="img/section_06/s06_francois.svg" />
+      <img class="salomon" src="img/section_06/s06_salomon.svg" />
+      <img class="text_04" src="img/section_06/s06_text_01.svg" />
+      <img class="text_05" src="img/section_06/s06_text_02.svg" />
+    </div>
+  </section>
+
+
+<!-- 자동 슬라이드  -->
+<section class="section07">
+    <div class="section07_container">
+        <img class="line_07" src="img/section_07/s07_line.svg" />
+        <img class="img_01" src="img/section_07/s07_img_01.svg" />
+        <img class="bt" src="img/section_07/s07_bt.svg" />
+        <img class="sbt" src="img/section_07/s07_sbt.svg" />
+        <img class="sbt2" src="img/section_07/s07_sbt.svg" />
+        <img class="sbt3" src="img/section_07/s07_sbt.svg" />
+        <img class="apparel" src="img/section_07/s07_apparel.svg" />
+        <img class="shop" src="img/section_07/s07_shop.svg" />
+      </div>
+    </div>
+  </section>
+
+
+
+
+
+
+
+
                 
-            <!-- gsap link -->
+    <!-- gsap link -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.3/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.3/ScrollTrigger.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.3/ScrollToPlugin.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.3/TextPlugin.min.js"></script>
-     <!-- GSAP and ScrollTrigger JS -->
-     <script src="https://unpkg.com/gsap@3.9.0/dist/gsap.min.js"></script>
-     <script src="https://unpkg.com/scrolltrigger-scope@3.5.1/dist/ScrollTrigger.min.js"></script>
-
-
-     <script src="https://unpkg.com/gsap@3.9.0/dist/gsap.min.js"></script>
-     <script src="https://unpkg.com/scrolltrigger-scope@3.5.1/dist/ScrollTrigger.min.js"></script>
     <!-- custom js -->
     <scrip src="js/luxy.js"></script>
     <script src="js/custom.js"></script>
