--- a/index.html
+++ b/index.html
@@ -16,8 +16,18 @@
             </div>
           </header>
 <section class="section01">
-    <div class="section01_container"> 
-            <!-- newchallenge text 애니메이션 -->
+    <div class="section01_container">
+      <!-- video 애니메이션 -->
+      <div class="video-container" id="video-container">
+        <video preload="preload" 
+            poster="https://a.storyblok.com/f/150329/1920x1080/fa926f253c/intro_fallback_sp.jpg" 
+            muted="muted" playsinline="" loop="loop" autoplay="autoplay" class="home-video">
+            <source src="./video/03.mp4">
+        </video>
+</div>
+
+
+    <!-- newchallenge text 애니메이션 -->
     <img class="n" src="img/section_01/s01_n.svg">
     <img class="e" src="img/section_01/s01_e.svg">
     <img class="w" src="img/section_01/s01_w.svg">
@@ -30,8 +40,9 @@
     <img class="n2" src="img/section_01/s01_n.svg">
     <img class="g" src="img/section_01/s01_g.svg">
     <img class="e3" src="img/section_01/s01_e.svg">
+    <!-- <img class="main_bg" src="img/section_01/s01_bg.svg" > -->
 
-<!-- newchallenge 하단 text 애니메이션 -->
+    <!-- newchallenge 하단 text 애니메이션 ! -->
 <img class="tomorrow" src="img/section_01/s01_tomorrow.svg">
 <img class="is" src="img/section_01/s01_is.svg">
 <img class="yours" src="img/section_01/s01_yours.svg">
@@ -39,14 +50,7 @@
 <img class="what" src="img/section_01/s01_what.svg">
 <img class="tomorrow2" src="img/section_01/s01_tomorrow_02.svg">
  </div>
-    <div class="video-container" id="video-container">
-        <video preload="preload" 
-            poster="https://a.storyblok.com/f/150329/1920x1080/fa926f253c/intro_fallback_sp.jpg" 
-            muted="muted" playsinline="" loop="loop" autoplay="autoplay" class="home-video">
-            <source src="./video/03.mp4">
-        </video>
-</div>
-        </section>
+</section>
 
 <section class="section02">
             <div class="section02_container">
@@ -57,11 +61,13 @@
                 <img class="jdg" src="img/section_02/section02_jdg.svg">
                 <img class="kay2" src="img/section_02/section02_kay.svg">
                 <img class="that" src="img/section_02/section02_That.svg">
+                <img class="bg_s02" src="img/section_02/s02_bg.svg">
             </div>
             </section>
 
             <section class="section03">
                 <div class="section03_container">
+                <img class="bg_s02" src="img/section_01/s01_bg.svg">
                 </div>
             </section>
 
@@ -158,7 +164,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.3/ScrollToPlugin.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.3/TextPlugin.min.js"></script>
     <!-- custom js -->
-    <scrip src="js/luxy.js"></script>
+    <!-- <scrip src="js/luxy.js"></script> -->
     <script src="js/custom.js"></script>
 </body>
 </html>
